readme.md file added

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,3 +12,16 @@
 .font-roboto {
     font-family: "Roboto", sans-serif;
 }
+
+.btn-call:active {
+    background-color: white;
+    color: black;
+}
+
+.btn-copy:active {
+    background-color: gray;
+}
+
+#btn-clear:active {
+    background-color: green;
+}
